--- a/.gitignore
+++ b/.gitignore
@@ -30,33 +30,27 @@ build/
 !**/src/test/**/build/
 
 ### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-node_modules
-bower_components
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-*.sublime*
+# testing
+/coverage
 
-psd
-thumb
-sketch
+# production
+/build
 
-### VS Code ###
-.vscode/
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.code-workspace
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Local History for Visual Studio Code
-.history/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-### VisualStudioCode Patch ###
-# Ignore all local history of files
-.history
-.ionide
